# dl-pixiv-fanbox

./: .gitignore  default.nix  dl-pixiv-fanbox.cabal  flake.nix  hie.yaml
app/: Main.hs
nix/: dl-pixiv-fanbox.nix  shell.nix
src/: PixivFanbox.hs
src/PixivFanbox/: Action.hs  Api.hs  Config.hs  Downloader.hs  Req.hs  Util.hs
src/PixivFanbox/Action/: FetchPosts.hs  FetchSupportingCreator.hs  FetchWork.hs  RetrieveContents.hs  SearchCreator.hs  ValidateSessionId.hs
src/PixivFanbox/Api/: Entity.hs  PostInfo.hs  PostListCreator.hs  SupportingCreatorList.hs
src/PixivFanbox/Api/Bell/: CountUnread.hs
src/PixivFanbox/Api/Creator/: ListRecommended.hs  Search.hs
src/PixivFanbox/Api/Plan/: ListSupporting.hs
src/PixivFanbox/Api/Post/: Info.hs  ListCreator.hs
src/PixivFanbox/Front/: Brick.hs
src/PixivFanbox/Front/Brick/: Event.hs  Phase.hs  State.hs
src/PixivFanbox/Front/Brick/Phase/: Menu.hs  SessionId.hs  SupportingCreators.hs
src/PixivFanbox/Front/Brick/UI/: Menu.hs  SessionId.hs  SupportingCreators.hs
