cabal-version: 3.0
name:          dl-pixiv-fanbox
version:       0.1.0.0
author:        924277+mtwtkman@users.noreply.github.com
maintainer:    mtwtkman
build-type:    Simple

common warnings
  ghc-options: -Wall

common basic
  build-depends:    base
  default-language: Haskell2010

executable dl-pixiv-fanbox
  import:         warnings, basic
  main-is:        Main.hs
  ghc-options: -threaded -Wall -Wcompat -O2
  build-depends:  dl-pixiv-fanbox
  hs-source-dirs: app

library
  import:          warnings, basic
  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , brick
    , bytestring
    , directory
    , exceptions
    , modern-uri
    , regex-tdfa
    , req
    , scalpel
    , text
    , time
    , transformers
    , vty
    , mtl
    , microlens
    , microlens-th
    , microlens-mtl
    , containers

  exposed-modules: PixivFanbox
  other-modules:
    PixivFanbox.Action
    PixivFanbox.Action.FetchPosts
    PixivFanbox.Action.FetchSupportingCreator
    PixivFanbox.Action.RetrieveContents
    PixivFanbox.Api
    PixivFanbox.Api.Entity
    PixivFanbox.Api.Plan.ListSupporting
    PixivFanbox.Api.Post.Info
    PixivFanbox.Api.Post.ListCreator
    PixivFanbox.Config
    PixivFanbox.Downloader
    PixivFanbox.Front.Brick
    PixivFanbox.Req
    PixivFanbox.Util
    PixivFanbox.Front.Brick.Phase.SessionId
